syntax = "proto3";

package msg.AgentPositionInfo;

enum E_DISPLAY_MODE {
    E_DISPLAY_MODE_ENTITY=0;
    E_DISPLAY_MODE_WAVE=1;
    E_DISPLAY_MODE_INTERSECTION=2;
    E_DISPLAY_MODE_ECHO=3;
};


enum E_WAVE_SENSOR_SOURCE_TYPE{
    E_WAVE_SENSOR_SOURCE_TYPE_NULL = 0;
    E_WAVE_SENSOR_SOURCE_TYPE_SRC=1;
    E_WAVE_SENSOR_SOURCE_TYPE_ECHO=2;
};

enum E_EVENT_MODE
{
    E_EVENT_MODE_NULL=0;
    E_EVENT_MODE_ADD=1;
    E_EVENT_MODE_REMOVE=2;
    E_EVENT_MODE_UPDATE=3;
};

message msg_transdata_entityposinfo
{
    uint64 PARAM_pos_pack_index=1;
    uint64 PARAM_timestamp=2;
    uint64 PARAM_sim_timestamp=3;
    uint32 PARAM_sensor_property=4;
    uint64   PARAM_pos_hexidx=5;
    int32   PARAM_longitude=6;
    int32   PARAM_latitude=7;
    double   PARAM_amsl=8;
    int32   PARAM_ref=9;
    float PARAM_roll=10;
    float PARAM_pitch=11;
    float PARAM_yaw=12;
    int32   PARAM_speed=13;
    int32 param_reserved1=14;
    int32 param_reserved2=15; 
    int32 param_reserved3=16; 
    int32 param_reserved4=17; 
    int32 param_reserved5=18; 
    int32 param_reserved6=19; 
};

message msg_transentityhexidxpostdata 
{
    uint64 uildsrc=1;
    uint64 uilddst=2;    
    E_DISPLAY_MODE eDdisplayMode=3;
    msg_transdata_entityposinfo entityinfo=4;    
};


message msg_transentityhexidxpostdata_array 
{
    repeated msg_transentityhexidxpostdata transentityhexidxpostdata = 1; 
};

message msg_transdata_sensorposinfo
{
    uint64 PARAM_sensor_pack_index=1;
    uint64 PARAM_timestamp=2;
    uint64 PARAM_sim_timestamp=3;
    uint64 PARAM_source_sensingmediaid=4;
    uint32 PARAM_elecmag_wave_properties=5;
    uint32 PARAM_sound_wave_properties=6;
    int32  PARAM_wave_freq_mean_sgnfcnt=7;
    int32  PARAM_wave_freq_std_dvtn_sgnfcnt=8;
    uint32 PARAM_wave_freq_distbtn=9;
    uint32 PARAM_wave_frequency_scale=10;
    uint32 PARAM_wave_usage=11;
    uint32 PARAM_wave_snd_rcv=12;
    uint32 PARAM_wave_silent_time_gap=13;
    uint32 PARAM_wave_field_media_id=14;
    uint64 PARAM_wave_modsig_id=15;

    double PARAM_wave_power_in_watts=16;
    uint32 PARAM_wave_propagation_model=17;

    double PARAM_wave_direction_pitch=18;
    double PARAM_wave_direction_azimuth=19;
    uint32 PARAM_wave_gaingraph=20;
};


message msg_TYPE_POLYGON_PT
{
    int32   PARAM_longitude=1;
    int32   PARAM_latitude=2;
    int32   PARAM_amsl=3;
    int32   PARAM_ref=4;
};


message msg_transentityhexidxdata
{
    uint64 uildsrc=1;
    uint64 uilddst=2;
    E_DISPLAY_MODE eDdisplayMode=3;
    msg_transdata_sensorposinfo sensorinfo=4;
    repeated uint64 hexidxslist = 5;
    repeated msg_TYPE_POLYGON_PT polygonlist=6;
};




message msg_transdata_eventInfo
{
    uint64 m_sensorid=1;
    uint64 m_entityid=2;
    uint64 m_sensingmediaid=3;
    E_WAVE_SENSOR_SOURCE_TYPE m_sensortype=4;
    msg_transdata_entityposinfo m_sensorposinfo=5;
    msg_transdata_entityposinfo m_entityposinfo=6;
    msg_transdata_sensorposinfo m_sensorproprety=7;
    bool m_entityisSensorProprety=8;
    msg_transdata_sensorposinfo m_entityproprety=9;
    double m_distance=10;
    uint64 m_timestamp=11;
};

message msg_transeventdata
{
    E_EVENT_MODE eventType=1;
    msg_transdata_eventInfo eventifo=2;
};

message msg_transeventlistdata
{
    E_EVENT_MODE eventType=1;
    repeated msg_transeventdata eventlist=2;
};

message msg_transeventlistdatasimple
{
    E_EVENT_MODE eventType=1;
    msg_transeventdata event=2;
};

message msg_transeventlistdatasimple_array
{
    repeated msg_transeventlistdatasimple transeventlistdatasimple=1;
};